# eigentrust-rust

./: .firebaseignore  .firebaserc  .gitignore  Cargo.toml  README.md  build.sh  firebase.json  index.html  worker.js
.cargo/: config.toml
.firebase/: hosting..cache  hosting.cGtn.cache
assets/: index.html  server.py  service-worker.js
example/: localtrust.csv  localtrust2.csv  localtrust3.csv  ls.csv  pretrust.csv  pretrust2.csv  pretrust3.csv  pretrustB.csv
pkg/: README.md  eigentrust.d.ts  eigentrust.js  eigentrust_bg.wasm  eigentrust_bg.wasm.d.ts  index.html  package.json  server.cjs
scripts/: generate_mocks.rs
src/: lib.rs  main.rs
src/basic/: compute.rs  eigentrust.rs  engine.rs  localtrust.rs  main.rs  mod.rs  trustvector.rs  util.rs
src/sparse/: entry.rs  matrix.rs  mod.rs  util.rs  vector.rs  vector_bak.rs
