[package]
name = "eigentrust-js"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = "0.2"
wasm-bindgen-futures = "0.4" 
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_log = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
env_logger = "0.10"

[lib]
crate-type = ["cdylib", "rlib"]