[package]
name = "eigentrust"
version = "0.1.0"
edition = "2021"
authors = ["Jenya <hypnagonia@gmail.com>"]
description = "Rust and WASM Eigentrust implementation"
repository = "https://github.com/hypnagonia/eigentrust-wasm"
default-run = "eigentrust"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "=0.2.93" }
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"  # Use the latest version available
env_logger = "0.10"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2.2", features = ["js"] }
log = "0.4"
rayon = "1.8"


[lib]
crate-type = ["cdylib"]

[[bin]]
name = "eigentrust"
path = "src/main.rs"

[[bin]]
name = "generate_mocks"
path = "scripts/generate_mocks.rs"







